Fetch Item added

--- a/TODO
+++ b/TODO
@@ -1,8 +1,11 @@
 1. retry in phone authentication
 2. Error Pages
+  a. No Item Found in store
+  b. Nominal Error (random)
 3. OTP Verification failed
 4. InternetConnection Check
 5. Whatsapp message
 6. Notification 
 7. URI launching
-6. Back Button in pages
+8. Back Button in pages
+9. Deep link
