listig block dart

--- a/TODO
+++ b/TODO
@@ -9,3 +9,15 @@
 7. URI launching
 8. Back Button in pages
 9. Deep link
+
+Views 
+1. Item View 
+2. My Store View 
+3. My Items View 
+4. Search
+5. My Invoices
+    1. Recived
+    2. Created
+6. Create Review 
+7. Send Quotation (through Whatsapp)
+8 . Share button in About of store view
